--- a/src/index.css
+++ b/src/index.css
@@ -147,6 +147,8 @@ textarea {
         width: 100%;
         margin-left: 200px;
     }
+    
+    /**/
     .Sidebar-drawerPaper-6 {
         width: 0 !important;
     }
