--- a/src/index.css
+++ b/src/index.css
@@ -137,7 +137,7 @@ textarea {
 }
 
 /** LOCAL */
-@media (max-width: 1500px) {
+/* @media (max-width: 1500px) {
     .container-content {
     }
     .Tutorial-container-1 {
@@ -147,11 +147,7 @@ textarea {
         width: 100%;
         margin-left: 200px;
     }
-    
- 
-    .Sidebar-drawerPaper-6 {
-        width: 0 !important;
-    }
+
     .Sidebar-drawerPaper-6 .MuiDrawer-paper {
         width: 200px !important;
         max-width: 200px !important;
@@ -197,27 +193,23 @@ textarea {
     .Tutorial-turnLeft-20 {
         margin-left: 0 !important;
     }
-}
+} */
 /** HOST */
-/* @media (max-width: 1500px) {
-    .container-content {
-    }
-    .Tutorial-container-1 {
-    }
-    .jss2 {
+@media (max-width: 1500px) {
+    .Tutorial-content-2 {
         position: relative !important;
         width: 100%;
         margin-left: 200px;
     }
 
-    .MuiDrawer-root {
+    .jss6 {
         width: 0 !important;
     }
-    .MuiDrawer-root .MuiDrawer-paper {
+    .jss6 .MuiDrawer-paper {
         width: 200px !important;
         max-width: 200px !important;
     }
-    .MuiDrawer-root {
+    .jss6 {
         position: fixed !important;
         z-index: 1000;
         height: 100% !important;
@@ -227,7 +219,7 @@ textarea {
         margin-left: 0 !important;
     }
 
-    .jss11 {
+    .Login-alert-2 {
         text-align: center !important;
         outline: none !important;
     }
@@ -235,31 +227,115 @@ textarea {
         text-align: center !important;
     }
 
-    .jss2 {
+    .jss18 {
         position: relative !important;
         width: 100%;
         margin-left: 200px;
     }
-    .jss3 {
+    .jss19 {
         position: relative !important;
         width: 100%;
         margin-left: 200px;
     }
-    .MuiDrawer-root .MuiDrawer-paper {
+    .jss23 .MuiDrawer-paper {
         width: 200px !important;
         max-width: 200px !important;
     }
-    .MuiDrawer-root {
+    .jss23 {
         position: fixed !important;
         z-index: 1000;
         height: 100% !important;
         min-height: 100% !important;
     }
-    .jss3 {
+    .jss20 {
         margin-left: 0 !important;
     }
-} */
+}
 
+/** LOCAL */
+/* @media (max-width: 500px) {
+ 
+    .editor-container {
+        flex-grow: 1;
+        flex-basis: 0;
+        display: flex;
+        flex-direction: column;
+        padding: 0.5rem;
+        background-color: hsl(225, 18%, 80%);
+        padding: 2px 1px;
+        position: relative;
+    }
+    body {
+        margin: 0 !important;
+        padding: 0 !important;
+        overflow-y: visible;
+    }
+    .code-container {
+        position: relative !important;
+        display: table;
+    }
+    .code-mirror-wrapper {
+        flex-grow: 1;
+        border-bottom-right-radius: 0.5rem;
+        border-bottom-left-radius: 0.5rem;
+    }
+    .top-pane {
+        z-index: 999;
+        position: relative;
+        height: 120px;
+        display: flex;
+        flex-direction: column;
+    }
+    .view {
+        position: relative;
+        margin-top: 25%;
+    }
+    .container-content {
+        position: absolute;
+        max-width: 100% !important;
+        height: auto !important;
+    }
+
+    .Sidebar-drawerPaper-6 .MuiDrawer-paper {
+        width: 200px !important;
+        max-width: 200px !important;
+    }
+
+    .Tutorial-turnLeft-3 {
+        margin-left: 0 !important;
+    }
+    .Login-background-1 {
+        margin-top: -3% !important;
+    }
+    .Login-alert-2 {
+        width: 100% !important;
+    }
+
+    .Tutorial-content-18 {
+        position: relative !important;
+        width: 100%;
+        margin-left: 0;
+    }
+    .Tutorial-content-19 {
+        position: relative !important;
+        width: 100%;
+        margin-left: 0;
+    }
+    .Sidebar-drawerPaper-23 .MuiDrawer-paper {
+        width: 200px !important;
+        max-width: 200px !important;
+    }
+
+    .Tutorial-turnLeft-20 {
+        margin-left: 0 !important;
+    }
+
+    .next-icon,
+    .prev-icon {
+        font-size: 16px !important;
+    }
+} */
+/** HOST */
 @media (max-width: 500px) {
     .pane {
         /* width: max-content !important; */
@@ -315,100 +391,94 @@ textarea {
         height: auto !important;
     }
 
-    .Sidebar-drawerPaper-6 .MuiDrawer-paper {
+    .jss6 .MuiDrawer-paper {
         width: 200px !important;
         max-width: 200px !important;
     }
-    .Sidebar-drawerPaper-6 {
+    .jss6 {
         position: fixed !important;
         z-index: 1000;
-        min-height: 10000% !important;
+        /* min-height: 10000% !important; */
         height: 100% !important;
         min-height: 100% !important;
     }
-    .Tutorial-turnLeft-3 {
+    .jss3 {
         margin-left: 0 !important;
     }
-    .Login-background-1 {
+    .jss1 {
         margin-top: -3% !important;
     }
-    .Login-alert-2 {
+    .jss2 {
         width: 100% !important;
-        /* text-align: center !important; */
     }
 
-    /**/
-    .Tutorial-content-18 {
+    .jss18 {
         position: relative !important;
         width: 100%;
         margin-left: 0;
     }
-    .Tutorial-content-19 {
+    .jss19 {
         position: relative !important;
         width: 100%;
         margin-left: 0;
     }
-    .Sidebar-drawerPaper-23 .MuiDrawer-paper {
+    .jss23 .MuiDrawer-paper {
         width: 200px !important;
         max-width: 200px !important;
     }
-    .Sidebar-drawerPaper-23 {
+    .jss23 {
         position: fixed !important;
         z-index: 1000;
         /* min-height: 10000% !important;  */
         height: 100% !important;
         min-height: 100% !important;
     }
-    .Tutorial-turnLeft-20 {
+    .jss20 {
         margin-left: 0 !important;
     }
 
-    .button-direct {
-        /* width: max-content !important; */
-    }
     .next-icon,
     .prev-icon {
         font-size: 16px !important;
     }
 }
 
-@media (max-width: 387px) {
+/** LOCAL */
+/* @media (max-width: 387px) {
     .Login-background-1 {
         margin-top: -3% !important;
     }
     .Login-alert-2 {
         width: max-content !important;
-        /* text-align: center !important; */
+    }
+} */
+/** HOST */
+@media (max-width: 387px) {
+    .jss1 {
+        margin-top: -3% !important;
+    }
+    .jss2 {
+        width: max-content !important;
     }
 }
 
-@media (max-width: 353px) {
+/** LOCAL */
+/* @media (max-width: 353px) {
     .col-12 .navbar {
         display: table !important;
     }
 
     .Tutorial-container-1 {
         position: relative !important;
-        /* margin-left: -200px; */
     }
     .Tutorial-content-2 {
         width: 100% !important;
     }
 
     .Sidebar-drawerPaper-6 {
-        position: fixed !important;
-        z-index: 1000;
-        min-height: 10000% !important;
-        height: 100% !important;
-        min-height: 100% !important;
         margin-top: 12px;
     }
-    .Tutorial-turnLeft-3 {
-        /* margin-left: 0 !important; */
-    }
-    .MuiCard-root .css-bhp9pd-MuiPaper-root-MuiCard-root form {
-        /* margin-top: 12% !important; */
-    }
+
     .Login-background-1 {
         margin-top: 12% !important;
     }
@@ -416,7 +486,6 @@ textarea {
         width: max-content !important;
     }
 
-    /**/
     .Tutorial-content-18 {
         position: relative !important;
         width: 100%;
@@ -432,14 +501,59 @@ textarea {
         max-width: 200px !important;
     }
     .Sidebar-drawerPaper-23 {
-        position: fixed !important;
-        z-index: 1000;
-        /* min-height: 10000% !important;  */
-        height: 100% !important;
         margin-top: 12px;
-        min-height: 100% !important;
     }
     .Tutorial-turnLeft-20 {
+        margin-left: 0 !important;
+    }
+} */
+/** HOST */
+@media (max-width: 353px) {
+    .col-12 .navbar {
+        display: table !important;
+    }
+
+    .jss1 {
+        position: relative !important;
+    }
+    .jss2 {
+        width: 100% !important;
+    }
+
+    .jss6 {
+        position: fixed !important;
+        z-index: 1000;
+        min-height: 10000% !important;
+        height: 100% !important;
+        min-height: 100% !important;
+        margin-top: 12px;
+    }
+
+    .jss1 {
+        margin-top: 12% !important;
+    }
+    .jss2 {
+        width: max-content !important;
+    }
+
+    .jss18 {
+        position: relative !important;
+        width: 100%;
+        margin-left: 0;
+    }
+    .jss19 {
+        position: relative !important;
+        width: 100%;
+        margin-left: 0;
+    }
+    .jss23 .MuiDrawer-paper {
+        width: 200px !important;
+        max-width: 200px !important;
+    }
+    .jss23 {
+        margin-top: 12px;
+    }
+    .jss20 {
         margin-left: 0 !important;
     }
 }
